Create Activity view with fake data

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -14,6 +14,7 @@ en:
   appendix: Appendix
   appendix_teaser: Do you want to learn more? <a href="%{link}">Check this chapter's appendix</a>"
   approved_message: Validated by mentor
+  approved_messages: validated
   are_you_sure: Are you sure you want to %{action}?
   ask_a_question: Ask a question!
   ask_community: Ask community for help
@@ -261,6 +262,8 @@ en:
   solve_more_exercises_to_level_up: Solve <span>number</span> more exercises to advance to the next level.
   solve_your_doubts: Solve your doubts
   solve_your_doubts_teaser: Do you have any doubts?
+  solved_exercises_count: solved
+  solved_exercises_percentage: done
   something_went_wrong: Something went wrong!
   sort: Sort
   sources: Sources
