--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -113,6 +113,7 @@ pt:
   failed: Sua solução não passou as provas
   feedback: Problemas que encontramos
   female: Feminino
+  file_exceeds_max_size: "O tamanho do arquivo não deve exceder %{size_kb}kb. Selecione outro arquivo."
   finish: Terminar
   first_name: Nome
   forbidden_explanation: Você poderia ter entrado com uma conta incorreta?
