Create user menu basic layout

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -170,6 +170,7 @@ en:
   moderation: Mentoring
   moderator: Mentor
   more_messages: More
+  my_account: My account
   my_doubts: My doubts
   my_submissions: My Submissions
   name: Name
