--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -182,6 +182,7 @@ es:
   moderation: Mentoría
   moderator: Mentor
   more_messages: Ver mensajes anteriores
+  my_account: Mi cuenta
   my_doubts: Mis consultas
   name: Nombre
   navigation_continue: 'Siguiente %{kind}: %{sibling}'
