Implement activity week filter

--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -303,6 +303,7 @@ es-CL:
   to_pending_review: Resolver
   to_solved: Resolver
   unauthorized_explanation: ¡Ups! Esto es lo que se conoce como %{error}, es decir que no iniciaste sesión.
+  total: Total
   uncategorized: No categorizado
   undo_upvote: No es útil
   unlocked_medal_as_avatar: ¡Obtuviste esta medalla! Ya puedes elegirla como avatar.
@@ -321,6 +322,7 @@ es-CL:
   view_details: Ver detalles
   want_permissions: El siguiente usuario requiere permisos
   we_miss_you: ¡Te extrañamos!
+  week_of: Semana del %{date}
   will_paginate:
     previous_label: "&#8592; Anterior"
     next_label: "Siguiente &#8594;"
