--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -296,6 +296,7 @@ en:
   to_pending_review: Mark as solved
   to_solved: Mark as solved
   unauthorized_explanation: You have no permissions for this content. Maybe you logged in with another account.
+  total: Total
   undo_upvote: Undo upvote
   unlocked_medal_as_avatar: You earned this medal! You can now choose it as an avatar.
   unspecified: I'd rather not say
@@ -313,6 +314,7 @@ en:
   view_details: View details
   want_permissions: The next user requires permissions
   we_miss_you: We miss you!
+  week_of: Week of %{date}
   welcome: Welcome to %{name}!
   working: "Working"
   wrong_answer: The answer is wrong
