Replace 'moderator' locale with genderless 'moderation'

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -156,7 +156,7 @@ en:
   messages: Messages
   messages_error: Previous messages are unavailable. Please try again later.
   more_messages: More
-  moderator: Mentor
+  moderation: Mentoring
   my_doubts: My doubts
   my_submissions: My Submissions
   name: Name
