--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -157,7 +157,7 @@ es-CL:
   minute: minuto
   minutes: minutos
   more_messages: Ver mensajes anteriores
-  moderator: Moderador
+  moderation: Moderación
   my_doubts: Mis consultas
   name: Nombre
   navigation_continue: 'Siguiente %{kind}: %{sibling}'
