--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -162,7 +162,7 @@ pt:
   minute: minuto
   minutes: minutos
   more_messages: Ver as mensagens anteriores
-  moderator: Mentor
+  moderation: Mentoria
   my_doubts: Minhas duvidas
   name: Nome
   navigation_continue: "Próximo %{kind}: %{sibling}"
