--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -301,6 +301,7 @@ pt:
   uploading_solution: Uploading solution
   user: Usuário
   user_data_updated: Os seus dados foram atualizados corretamente
+  user_preferences_updated: Os seus preferências foram atualizados corretamente
   username: Nome de usuário
   view_details: Ver detalhes
   want_permissions: O próximo usuário requer permissões
