--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -297,6 +297,7 @@ en:
   upvotes_count_asc: Least voted
   user: User
   user_data_updated: Your data was updated successfuly
+  user_preferences_updated: Your preferences were updated successfully
   username: Username
   view_details: View details
   want_permissions: The next user requires permissions
