--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -169,6 +169,7 @@ es:
   minutes: minutos
   more_messages: Ver mensajes anteriores
   moderation: Mentoría
+  moderator: "Mentor"
   my_doubts: Mis consultas
   name: Nombre
   navigation_continue: 'Siguiente %{kind}: %{sibling}'
