--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -156,9 +156,9 @@ es-CL:
   messages_error: Los mensajes anteriores no están disponibles en este momento. ¡Vuelve a intentar más tarde!
   minute: minuto
   minutes: minutos
-  more_messages: Ver mensajes anteriores
   moderation: Moderación
-  moderator: "Mentor"
+  moderator: Mentor
+  more_messages: Ver mensajes anteriores
   my_doubts: Mis consultas
   name: Nombre
   navigation_continue: 'Siguiente %{kind}: %{sibling}'
