--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -161,9 +161,9 @@ pt:
   messages_error: As mensagens acima não estão disponíveis no momento. Eu tentei novamente mais tarde!
   minute: minuto
   minutes: minutos
-  more_messages: Ver as mensagens anteriores
   moderation: Mentoria
-  moderator: "Mentor"
+  moderator: Mentor
+  more_messages: Ver as mensagens anteriores
   my_doubts: Minhas duvidas
   name: Nome
   navigation_continue: "Próximo %{kind}: %{sibling}"
