--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -17,7 +17,9 @@ es:
   approved_message: Validado por mentor
   are_you_sure: '¿Estás seguro que querés %{action}?'
   ask_a_question: ¡Hacé una pregunta!
-  approved_messages: validados
+  approved_messages:
+    one: validado
+    other: validados
   ask_community: Preguntá a la comunidad
   ask_redirect: ¿Querés que te llevemos ahí?
   ask_the_first_question: ¡Hacé la primera pregunta!
@@ -186,6 +188,9 @@ es:
   message: Mensaje
   messages: Mensajes
   messages_error: Los mensajes anteriores no están disponibles en este momento. ¡Volvé a intentar mas tarde!
+  messages_pluralized:
+    one: Mensaje
+    other: Mensajes
   minute: minuto
   minutes: minutos
   moderation: Mentoría
