--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -295,7 +295,7 @@ en:
   upvotes_count_desc: Most voted
   upvotes_count_asc: Least voted
   user: User
-  user_data_updated: Your data was updated successfuly
+  user_data_updated: Your data was updated successfully
   username: Username
   view_details: View details
   want_permissions: The next user requires permissions
