--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -236,6 +236,8 @@ en:
   see_context: Watch exercise introduction animation
   sending_solution: Sending solution
   show: Show
+  show_texts_as_uppercase: Show text in uppercase
+  show_texts_as_uppercase_detail: Converts most texts to uppercase to simplify reading.
   sign_in: Sign in
   sign_in_action: sign in
   sign_out: Sign Out
