--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -240,6 +240,8 @@ es-CL:
   send: Enviar
   sending_solution: Enviando solución
   show: Mostrar
+  show_texts_as_uppercase: Mostrar texto en mayúsculas
+  show_texts_as_uppercase_detail: Convierte la mayoría de los textos a letras mayúsculas para simplificar la lectura.
   sign_in: Inicia sesión
   sign_in_action: iniciar sesión
   sign_out: Cerrar Sesión
