Fix mentoring translation

--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -167,7 +167,7 @@ es-CL:
   messages_error: Los mensajes anteriores no están disponibles en este momento. ¡Vuelve a intentar más tarde!
   minute: minuto
   minutes: minutos
-  moderation: Moderación
+  moderation: Mentoría
   moderator: Mentor
   more_messages: Ver mensajes anteriores
   my_doubts: Mis consultas
