--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -117,6 +117,7 @@ pt:
   expected_state: Tabuleiro esperado
   explain_redirect: Percebemos que você se registrou em outra organização.
   failed: Sua solução não passou as provas
+  faqs: Perguntas frequentes
   feedback: Problemas que encontramos
   female: Feminino
   file_exceeds_max_size: "O tamanho do arquivo não deve exceder %{size_kb}kb. Selecione outro arquivo."
