--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -266,16 +266,15 @@ es-CL:
   skipped_solve_anyway: Resolver de todos modos
   solution: Solución
   solved: Resuelta
-  solved_count:
-    one: 1 resuelta
-    other: '%{count} resueltas'
   solved_exercises: Ejercicios Resueltos
   solve_doubts: Resuelve consultas
   solve_more_exercises_to_level_up: Resuelve <span>number</span> ejercicios más para pasar al siguiente nivel.
   solve_your_doubts: Consulta tus dudas
   solve_your_doubts_teaser: ¿Tienes alguna consulta?
   something_went_wrong: ¡Ups!, algo no anduvo bien...
-  solved_exercises_count: resueltos
+  solved_exercises_count:
+    one: resuelto
+    other: resueltos
   solved_exercises_percentage: realizado
   sort: Ordenar
   sources: Bibliografía
