--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -70,6 +70,13 @@ es:
   date: Fecha
   day: Día
   days: Días
+  delete_account: Eliminar cuenta
+  delete_account_agree: Comprendo las consecuencias y quiero eliminar mi cuenta
+  delete_account_confirmation_email_explain_html: <p>Te enviamos un correo electrónico a <a href="%{user_email}">%{user_email}</a> para continuar con el proceso de eliminación. </p><p>Si no lo recibiste, por favor escribinos a <a href="%{support_email}">%{support_email}</a>.</p>
+  delete_account_confirmation_request: Para confirmar esta acción, escribí
+  delete_account_confirmation_text: quiero eliminar mi cuenta
+  delete_account_explain: Al eliminar tu cuenta, perderás acceso a todos los contenidos, así como a tu progreso.
+  delete_account_modal_explain_html: <p>Estás a punto de eliminar la cuenta de <strong>%{name}</strong></p><p>Al hacerlo, perderás acceso a los siguientes recorridos:</p>
   description: Descripción
   destroy_message: eliminar el mensaje
   destroy: Eliminar
