Send delete confirmation mail on submit

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -81,6 +81,7 @@ en:
   delete_account_confirmation_text: delete my account
   delete_account_explain: After deleting your account, you will lose access to all the contents and to your progress.
   delete_account_modal_explain_html: <p>You're about to delete <strong>%{name}</strong> account</p><p>By doing that, you will lose access to the following paths:</p>
+  delete_account_mumuki: Delete your Mumuki account
   deleted_by: Deleted by %{deleter}
   deleted_message_warning: If you repeateadly violate these or other rules, you may be prohibited from accessing the forum or you may suffer more severe consequences, such as being expulsed from the course.
   deletion_motive:
