--- a/lib/mumuki/laboratory/locales/pt.yml
+++ b/lib/mumuki/laboratory/locales/pt.yml
@@ -82,6 +82,7 @@ pt:
   delete_account_confirmation_text: deletar minha conta
   delete_account_explain: Depois de excluir sua conta, você perderá o acesso a todo o conteúdo e ao seu progresso.
   delete_account_modal_explain_html: <p>Você está prestes a excluir a conta <strong>%{name}</strong></p><p>Ao fazer isso, você perderá o acesso aos seguintes caminhos:</p>
+  delete_account_mumuki: Exclua sua conta Mumuki
   deleted_by: Removido pelo
   deleted_message_warning: Se você violar repetidamente essas ou outras regras da Área de Consulta, seu acesso a ela pode ser proibido ou você pode sofrer consequências mais graves, como a expulsão do curso.
   deletion_motive:
