Toggle edit/preview buttons and editor/preview message when clicking

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -79,6 +79,7 @@ en:
   dont_leave_us: Don't leave us! Learning is fun. You just have to keep at it.
   download: Download your solution
   edit: Edit
+  edit_message: Edit message
   edit_profile: Edit profile
   editor_placeholder: "write your solution here..."
   email: Email
