--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -87,6 +87,7 @@ es:
   dont_leave_us: ¡No nos abandones! Aprender a programar es divertido. Sólo tenés que seguir practicando.
   download: "Descargá lo que hiciste"
   edit: Editar
+  edit_message: Editar mensaje
   edit_profile: Editar perfil
   editor_placeholder: "...escribí tu solución acá..."
   email: Email
