Show error message if error when trying to get message preview
The request may fail if the message content - and therefore the URL -
is too long. There might be a workaround to be found, but the limit
is high enough that it shouldn't occur often or at all in real use cases

--- a/lib/mumuki/laboratory/locales/en.yml
+++ b/lib/mumuki/laboratory/locales/en.yml
@@ -231,6 +231,7 @@ en:
   please_fill_profile_data: Please complete your profile data to continue!
   please_validate: 'Please validate your data before continue:'
   preview: Preview
+  preview_error: The preview cannot be shown. Check your internet connection or try with a shorter message.
   previous_exercise: Previous
   problem_with_exercise: '[Mumuki] Problem with exercise: %{title}'
   processing_your_solution: We are processing you solution
