--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -275,6 +275,9 @@ es-CL:
   solve_your_doubts: Consulta tus dudas
   solve_your_doubts_teaser: ¿Tienes alguna consulta?
   something_went_wrong: ¡Ups!, algo no anduvo bien...
+  solved_count:
+    one: 1 resuelta
+    other: '%{count} resueltas'
   solved_exercises_count:
     one: resuelto
     other: resueltos
