--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -267,6 +267,7 @@ es-CL:
   send: Enviar
   sending_solution: Enviando solución
   show: Mostrar
+  show_message: Mostrar mensaje
   sign_in: Inicia sesión
   sign_in_action: iniciar sesión
   sign_out: Cerrar Sesión
