--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -282,6 +282,7 @@ es:
   send: Enviar
   sending_solution: Enviando solución
   show: Mostrar
+  show_message: Mostrar mensaje
   sign_in: Iniciá sesión
   sign_in_action: iniciar sesión
   sign_out: Cerrar Sesión
