--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -346,7 +346,7 @@ es:
   user: Usuario
   username: Nombre de usuario
   view_details: Ver detalles
-  want_permissions: El siguiente usuario requiere permisos
+  want_permissions: El siguiente usuario requiere permisos para la organización
   we_miss_you: ¡Te extrañamos!
   welcome: ¡Te damos la bienvenida a %{name}!
   week_of: Semana del %{date}
