--- a/lib/mumuki/laboratory/locales/es-CL.yml
+++ b/lib/mumuki/laboratory/locales/es-CL.yml
@@ -118,6 +118,7 @@ es-CL:
   exam_registration_explanation_html: Tienes tiempo hasta el <strong>%{date}</strong> para inscribirte. Pasada esa fecha, tu solicitud será evaluada y recibirás una confirmación. <br> ¡No olvides revisar las notificaciones!
   exam_registration_open: ¡Ya puedes inscribirte a %{description}!
   exam_registration_to: Inscripción a %{description}
+  exams_will_be_here: Tus exámenes en esta organización aparecerán acá
   exams: Exámenes
   exercise: Ejercicio
   exercise_count: ejercicios
