--- a/lib/mumuki/laboratory/locales/es.yml
+++ b/lib/mumuki/laboratory/locales/es.yml
@@ -173,6 +173,8 @@ es:
   invitation_for: 'Unirse a %{course}'
   item_not_accessible: No tenés permisos para acceder a este contenido
   its_been_a_while: Hace un tiempo que no usás Mumuki.
+  i_will_reply: Yo respondo
+  i_wont_reply: Mejor no respondo
   joining_html: '¡Te damos la bienvenida al curso <strong>%{course}</strong>!'
   keep_learning: ¡Seguí aprendiendo!
   kids_default_success: ¡Lo hiciste muy bien!
